
	New features:

	all : allow `enum abstract` syntax instead of `@:enum abstract` (#4282)

	General improvements and optimizations:

	all : implemented `for` loop unrolling (#3784)
	all : metadata can now use `.`, e.g. `@:a.b`. This is represented as a string (#3959)
	js : added externs for js.Date (#6855)
	js : respect `-D source-map` flag to generate source maps in release builds

	Bugfixes:

	all : fixed fields with default values for `@:structInit` classes (#5449)
	display : fixed completion in packages starting with underscore (#5417)
	flash : fixed silently swallowing exceptions in getters/setters when invoked with Reflect methods (#5460, #6871)

2018-02-23: 4.0.0-preview.3

	See full commit history at https://github.com/HaxeFoundation/haxe/compare/4.0.0-preview.2...4.0.0-preview.3, notable changes below:

	New features:

	all : added new function type syntax (`(a:Int, b:String)->Void`) (#6645)
	all : added column to StackItem.FilePos (#6665)
	all : added `-D warn-var-shadowing`
	all : added haxe.Log.formatOutput (#6738)
	js : added js.Syntax class for generating unsupported JavaScript syntax in a type-safe analyzer-friendly way
	js : added js.Map and js.Set and js.JsIterator extern definitions (ES6)
	hl : added hl.Format.digest, use it for native Sha1/Md5

	General improvements and optimizations:

	all : made all non-warning/non-error compiler messages output to stdout (#4480)
	all : make DCE keep constructor if any instance field is kept (#6690)
	all : make `final` in structures use class notation
	display : added `this` and `super` to toplevel completion (#6051)
	php : implemented direct method comparison. No need to use `Reflect.compareMethods()`
	php : added `php.Syntax.code()` instead of deprecated `untyped __php__()` (#6708)
	php : added methods to `php.Syntax` for each php operator: `??`, `?:`, `**` etc. (#6708)
	python : add ssl support for http requests
	python : improve Sys.print(ln) code generation (#6184)