@@ -31,7 +31,7 @@ class Js {
 			for (es3 in       [[], ["-D", "js-es=3"]])
 			for (unflatten in [[], ["-D", "js-unflatten"]])
 			for (classic in   [[], ["-D", "js-classic"]])
-			for (enums_as_objects in [[], ["-D", "js-enums-as-objects"]])
+			for (enums_as_objects in [[], ["-D", "js-enums-as-arrays"]])
 			{
 				var extras = args.concat(es3).concat(unflatten).concat(classic).concat(enums_as_objects);
 
