@@ -10,6 +10,7 @@ XXXX-XX-XX: 4.0.0-preview.4
 	all : metadata can now use `.`, e.g. `@:a.b`. This is represented as a string (#3959)
 	js : added externs for js.Date (#6855)
 	js : respect `-D source-map` flag to generate source maps in release builds
+	js : enums are now generated as objects instead of arrays (#6350)
 
 	Bugfixes:
 
